crates/schemas/tests/compile-fail/public_boxfuture_trait.stderr
error[E0107]: enum takes 2 generic arguments but 1 generic argument was supplied
 --> tests/compile-fail/public_boxfuture_trait.rs:5:25
  |
5 |     fn method(&self) -> Result<String, >; // Missing error type
  |                         ^^^^^^ ------ supplied 1 generic argument
  |                         |
  |                         expected 2 generic arguments
  |
help: add missing generic argument
  |
5 |     fn method(&self) -> Result<String, E, >; // Missing error type
  |                                      +++
